whitespace fix for contact

--- a/style.css
+++ b/style.css
@@ -916,10 +916,11 @@ button{
 	height: 100%;
 	background-color: #43354c;
 	flex-basis: 40%;
+	/* min-width: 50%; */
 	display: flex;
 	flex-flow: column nowrap;
 	justify-content: center;
-	padding-left: 1.5em;
+	padding: 0 1em;
 	border-radius: 10px 0px 0px 10px;
 }
 
@@ -931,6 +932,7 @@ button{
 
 .contact-links{
 	cursor: pointer;
+	white-space: nowrap;
 }
 
 .contact-links:hover a{
@@ -958,7 +960,7 @@ button{
 
 .contact-form-holder{
 	margin: none;
-	flex-basis: 60%;
+	flex-basis: 50%;
 	font-weight: 400;
 	padding: 0px 7.5%;
 }
